--- a/register.html
+++ b/register.html
@@ -101,7 +101,7 @@
 
 <body>
   <div class="main">
-    <img src="./image.png" alt="主页背景" style=" width: 47.4vw;object-fit:cover;">
+    <img src="./images/image.png" alt="主页背景" style=" width: 47.4vw;object-fit:cover;">
     <div class="login">
       <div class="title">注册</div>
       <div class="user">
