--- a/test.html
+++ b/test.html
@@ -196,10 +196,10 @@
   <div class="main">
     <div class="top">
       <div class="head">
-        <div class="head-left"><img class="list-icon" src="./logo.png" alt="logo"></div>
+        <div class="head-left"><img class="list-icon" src="./images/logo.png" alt="logo"></div>
         <div class="head-center">足球赛事即时分析平台</div>
         <div class="head-right">
-          <img class="userIcon" src="user.png" alt="用户头像">
+          <img class="userIcon" src="./images/user.png" alt="用户头像">
           <div class="userName">B21030126</div>
         </div>
       </div>
@@ -217,7 +217,7 @@
         <div class="listBoard">
           <div class="timeList">
             <div class="timeList-title">
-              <img class="time-icon" src="./timeList.png" alt="列表">
+              <img class="time-icon" src="./images/timeList.png" alt="列表">
               <h2 class="time-h2">关键帧列表</h2>
             </div>
             <ul class="list">
@@ -243,11 +243,11 @@
           </div>
           <div class="vedio">
             <div class="vedio-title">
-              <img class="time-icon" src="./timeList.png" alt="列表">
+              <img class="time-icon" src="./images/timeList.png" alt="列表">
               <h2 class="time-h2">实况展示</h2>
             </div>
             <video width="500" height="400" controls>
-              <source class="video" src="./video2.mp4" type="video/mp4">
+              <source class="video" src="./images/video2.mp4" type="video/mp4">
               您的浏览器不支持 video 标签。
             </video>
           </div>
