--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <body>
   <div class="main">
-    <img src="./image.png" alt="主页背景" style=" width: 47.4vw;object-fit:cover;">
+    <img src="./images/image.png" alt="主页背景" style=" width: 47.4vw;object-fit:cover;">
     <div class="login">
       <div class="title">登录</div>
       <div class="user">
